# swc-dom-source

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
examples/nextjs/: next.config.ts  package-lock.json  package.json
examples/nextjs/app/: globals.css  layout.tsx  page.tsx
src/: lib.rs
