[package]
name = "swc_dom_source"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

swc_core = { version = "35.0.0", features = [
  "ecma_plugin_transform",
  "ecma_visit",
  "ecma_ast",
  "common",
] }
